<resources>
    <string name="app_name">LiteBarometer</string>
    <string name="now_barometer">Current barometric pressure</string>
    <string name="barometer_share">Share barometric pressure</string>
    <string name="db_clear">Delete history</string>
    <string name="barometer_history">Barometric history</string>
    <string name="delete_history_mes">Are you sure you want to delete all history?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="graph_menu">Graph</string>
    <string name="licence">Licence</string>
    <string name="kono_app">About this app</string>
    <string name="notification">Background pressure acquisition service</string>
    <string name="notification_desc">The barometric pressure is acquired in the background.</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">End service</string>
    <string name="service_description">By using this service, you can collect barometric pressure at regular intervals even when the app is not running.</string>
    <string name="service_time">Interval to get(Minutes)</string>
    <string name="save_button">Save settings</string>
    <string name="background">Background</string>
    <string name="kaimen_hosei_kiatsu">"Sea level correction pressure "</string>
    <string name="offline_weather">Offline weather</string>
    <string name="weather">Weather</string>
    <string name="weather_sun">Sunny</string>
    <string name="weather_rain">rain</string>
    <string name="offline_weather_descriotion">This value is roughly determined from the current barometric pressure. In addition, it affects the current altitude (sea level correction pressure is not calculated.)</string>
    <string name="barometer_widget_update_service_name">Barometer widget update service</string>
    <string name="barometer_widget_update_service_working">Barometer widget is being updated ...</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>
