<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_activity_menu_now_barometer"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/now_barometer" />
    <item
        android:id="@+id/main_activity_menu_offline_weather"
        android:icon="@drawable/ic_weather_sun"
        android:title="@string/offline_weather" />
    <item
        android:id="@+id/main_activity_menu_barometer_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/barometer_history" />
    <item
        android:id="@+id/main_activity_menu_background_service"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/background" />
    <item
        android:visible="false"
        android:id="@+id/main_activity_menu_graph"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/graph_menu" />
</menu>