<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:layout_weight="1" >

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragment_offline__weather_imageview"
                    android:layout_width="50sp"
                    android:layout_margin="10sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_weather_sun" />

                <TextView
                    android:id="@+id/fragment_offline__weather_textview"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="36sp"
                    android:text="@string/weather_sun" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_offline_weather_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="40sp" />
            <TextView
                android:id="@+id/fragment_offline_weather_kaimen_hosei_kiatsu_textview"
                android:layout_width="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:layout_height="wrap_content"
                android:text="@string/offline_weather_descriotion"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>